# records_inventory_agent

./: .gitignore  README.md  config.py  pyproject.toml  reactagent.py  workflowagent.py
functions/: __init__.py  album_queries.py  chat_ai.py  connect_db.py  file_operations.py  state.py  tools.py  utils.py
resources/: albumlist.csv  email_responses.csv  email_responses_2.csv  emails.csv
